--- a/index.css
+++ b/index.css
@@ -1,3 +1,49 @@
+body {
+  background-color: black;
+  color: white;
+  font-family: "Press Start 2P", monospace;
+}
+
+img {
+  width: 120px;
+  height: 120px;
+}
+
+button {
+  font-family: "Press Start 2P", monospace;
+  line-height: 60px;
+  font-weight: bold;
+  font-size: large;
+  color: black;
+  padding: 0 40px;
+  background: #ffcb05;
+  border: 3px solid black;
+  border-radius: 5px;
+  box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+  height: 75px;
+  width: 200px;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+
+button:hover {
+  background: #003060;
+  color: white;
+  position: relative;
+  top: 10px;
+  box-shadow: none;
+}
+
+.announcement {
+  font-family: "Permanent Marker", monospace;
+  color: orange;
+  font-size: 2rem;
+
+}
+
+
+
 .container {
   display: flex;
   justify-content: center;
@@ -21,13 +67,13 @@
   gap: 100px;
 }
 
-.control-btns-container{
+.control-btns-container {
   display: flex;
   flex-direction: row;
   gap: 50px;
 }
 
-.player-cage-right{
+.player-cage-right {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +81,7 @@
   gap: 10px;
 }
 
-.player-cage-left{
+.player-cage-left {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,7 +89,7 @@
   gap: 10px;
 }
 
-.arrow{
+.arrow {
   width: 30px;
   height: auto;
 }
@@ -68,15 +114,12 @@
 }
 
 
-.start-button {
-  
-
-}
+.start-button {}
 
 .board-grid {
   display: grid;
   grid-template: repeat(3, 150px) / repeat(3, 150px);
-  background-color: red;
+  background-color: lightgray;
 
 }
 
@@ -85,10 +128,12 @@
   justify-content: center;
   align-items: center;
   border: solid black;
-  font-size: 10em;
+  font-size: 5em;
+  color: black;
 }
 
 .cell:hover {
-  background-color: green;
+  background-color: grey;
   cursor: pointer;
+  color: white;
 }
